# Quadcopter-Project

./: .gitignore  CMakeLists.txt  README.md
Misc/: Memory usage testing.txt  example.qfl  switching_schematic.xcf  test_pid.py
Misc/Logs/QFL/: QuadControl 201705081200.QFL  (+1 more)
Modules/: infrared.cpp  infrared.h
Modules/Autopilot/: Autopilot.cpp  Autopilot.h
Modules/Grabber/: Grabber.cpp  Grabber.h
Modules/Instruments/: Instruments.cpp  Instruments.h  infrared.cpp  infrared.h
Modules/Logger/: Logger.cpp  Logger.h
Modules/LoggerLite/: LoggerLite.cpp  LoggerLite.h  parse_logs.py
Modules/QuadControl/: QuadControl.ino
Modules/SerialLogger/: SerialLogger.cpp  SerialLogger.h  SerialLogger.ino
Testing/: InstrumentTest.ino  test.cpp
Testing/AutopilotActivationTest/: AutopilotActivationTest.ino  RESULTS.QFL
Testing/AutopilotLogicTest/: AutopilotLogicTest.ino
Testing/AutopilotRemoteTest/: AutopilotRemoteTest.ino
Testing/AutopilotTest/: AutopilotTest.ino
Testing/CombinedTest/: CombinedTest.ino
Testing/GrabberTest/: GrabberTest.ino
Testing/GyroRequestTest/: GyroRequestTest.ino
Testing/InfraredTest/: InfraredTest.ino
Testing/InstrumentsTest/: InstrumentsTest.ino
Testing/LoggerLiteTest/: LoggerLiteTest.ino
Testing/LoggerTest/: LoggerTest.ino
Testing/ReceiverGearEmulator/: ReceiverGearEmulator.ino
Testing/ReceiverTest/: ReceiverTest.ino
Testing/ServoPWMTest/: ServoPWMTest.ino
Testing/ServoTimer2Test/: ServoTimer2Test.ino
Testing/TransmitterTest/: TransmitterTest.ino
libraries/ServoTimer2/: ServoTimer2.cpp  ServoTimer2.h  keywords.txt
(+7 files in other folders)
